# proSVD

./: AR data test.ipynb  FakePatientData.ipynb  FakePatientData1.ipynb  L1_procrustes.ipynb  README.md  Test_notebook.ipynb  ar_toy_track_subspace.ipynb  background_modeling.ipynb  behavior_example.py  incremental_jpca.ipynb  input.avi  l1_orthogonal_procrustes.ipynb  musall2019_behavior.py  proSVD.py  pro_utils.py  pyproject.toml  requirements.txt  setup.py  ssSVD.py  streamingSvd.py  temp.py  testStreamingSvd.py  test_proSVD.py  toy_examples.ipynb  toy_track_subspace.ipynb  utils.py
demos/: batch_eigenvalues.py  ieeg_seizure.py  musall2019_behavior.py  pandarinath2018_reaching.py  rp_benchmark.py  stringer2019_ephys.py  toy_examples.py
notebooks/: ieeg_seizure.py  l1_orthogonal_procrustes.ipynb  musall2019_behavior.py  pandarinath2018_reaching.py  reaching_manifolds.ipynb  rp_benchmark.py  toy_examples.ipynb  toy_examples.py
proSVD/: proSVD.py
tests/: test_proSVD.py  test_proSVD_jax.py  test_svd_timing.py
